--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,27 +15,26 @@
         tools:targetApi="31">
         <activity
             android:name=".MyProfile"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="true" />
 
         <activity
-            android:name=".LoginModule.SignUpActivity"
+            android:name=".ShopNow"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
+        <activity
+            android:name=".LoginModule.SignUpActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
