--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sajilo"
         tools:targetApi="31">
+
+        <activity
+            android:name=".splash_Screen"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".LoginModule.LoginActvity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="false" />
+
         <activity
             android:name=".MyProfile"
             android:exported="true" />
@@ -24,16 +41,17 @@
         <activity
             android:name=".ShopNow"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
             android:name=".LoginModule.SignUpActivity"
-            android:exported="true" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+
+        </activity>
+
+
 
     </application>
 
