--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -9,9 +10,9 @@ android {
         applicationId "com.sample.sajilo"
         minSdk 21
         targetSdk 32
-        versionCode 1
+        versionCode 2
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -44,4 +45,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.2.1'
     implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.Drjacky:ImagePicker:2.1.14'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 }
