--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'com.github.Drjacky:ImagePicker:2.1.14'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
 }
