--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 
 }
