--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        viewBinding = true
     }
 }
 
@@ -56,5 +61,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 
 }
