--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginModule.ChangePasswordActivity"
             android:exported="false">
             <meta-data
@@ -46,11 +49,11 @@
             android:exported="true" />
         <activity
             android:name=".ShopNow"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".LoginModule.SignUpActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
