--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".AddToCartActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".All_information_Services"
             android:exported="false">
             <meta-data
@@ -28,7 +35,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".AllVendors"
+            android:name=".Grocery.GroceryAllActivity.AllVendors"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -77,9 +84,6 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ShopNow"
             android:exported="true" />
         <activity
             android:name=".LoginModule.SignUpActivity"
